tests/sksl/errors/GrMainTooManyParameters.fp
half4 main(float2 coords, float2 extra) {
    return half4(0);
}
